ucs-test-ucsschool (6.0.7) unstable; urgency=low

  * Bug #35447: users cannot modify their own password via ldap.modify

 -- Daniel Troeder <troeder@univention.de>  Wed, 12 Jun 2019 16:20:17 +0200

ucs-test-ucsschool (6.0.6) unstable; urgency=low

  * Bug #35447: adapt to API change

 -- Daniel Troeder <troeder@univention.de>  Thu, 06 Jun 2019 08:33:01 +0200

ucs-test-ucsschool (6.0.5) unstable; urgency=low

  * Bug #35447: make AutoMultiSchoolEnv a subclass of UCSTestSchool and thus
    LDAPACLCheck a context manager
  * Bug #35447: use logging instead of print, make ucr attribute public

 -- Daniel Troeder <troeder@univention.de>  Wed, 05 Jun 2019 15:46:28 +0200

ucs-test-ucsschool (6.0.4) unstable; urgency=low

  * Bug #43039: fix test

 -- Daniel Troeder <troeder@univention.de>  Wed, 05 Jun 2019 09:04:49 +0200

ucs-test-ucsschool (6.0.3) unstable; urgency=low

  * Bug #35447: merged code for generating a multischool test environment
    with all objects

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 04 Jun 2019 12:46:28 +0200

ucs-test-ucsschool (6.0.2) unstable; urgency=low

  * Bug #35447: delete created objects

 -- Daniel Troeder <troeder@univention.de>  Tue, 04 Jun 2019 12:13:12 +0200

ucs-test-ucsschool (6.0.1) unstable; urgency=low

  * Bug #43039: check computerroom._readRoomInfo verifies room DN

 -- Daniel Troeder <troeder@univention.de>  Tue, 04 Jun 2019 09:51:55 +0200

ucs-test-ucsschool (6.0.0-64) unstable; urgency=low

  * Bug #35447:
    - add 75_ldap_acls_specific_tests
    - updated 78_ldap_acls_dump

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 31 May 2019 18:20:07 +0200

ucs-test-ucsschool (6.0.0-63) unstable; urgency=low

  * Bug #49557: check if ucsschool.lib model classes changed

 -- Daniel Troeder <troeder@univention.de>  Thu, 30 May 2019 08:59:59 +0200

ucs-test-ucsschool (6.0.0-62) unstable; urgency=low

  * Bug #49556: make inherited errors more obvious
